# CORAL

./: .gitignore  CITATION.cff  README.md  RELEASE_NOTES.md  angular.json  package-lock.json  package.json  tsconfig.json  tslint.json
back_end/: .gitignore  README.md
back_end/coral/: arango_service.py  template.py  web_services.py  workspace.py
back_end/test/: data_access_api_test.py  data_retrieval_test.py  run_tests.sh
back_end/var/: typedef.json
convert/spark-minio/: README.md  convert_bricks.py  convert_to_berdl_loader.py  download_brick_csvs.py  download_typedef_tsvs.py  make_ddt_tables.py  make_tables.py  parse_process.py  print_schema.py  pyproject.toml  to_spark.py  update_coral_ontologies.py  walk_provenance.py
example/: README.md
example/enigma/: README.md
example/pedometer/: README.md
front_end/: .gitignore  README.md  angular.json  package-lock.json  package.json  tsconfig.json  tslint.json
front_end/src/: index.html  karma.conf.js  styles.css
generix/: arango_service.py  brick.py  dataprovider.py  datatable.py  descriptor.py  es_service.py  indexdef.py  indexer.py  neo_service.py  ontology.py  ontology.py~  provenance.py  query.py  report.py  search.py  services.py  template.py  tools.py  toolx.py  typedef.py  user_profile.py  utils.py  validator.py  web_services.py  workspace.py
src/: index.html  karma.conf.js  styles.css  tsconfig.app.json
src/app/: app-routing.module.ts  (+5 more)
test/: data_access_api_test.py  data_retrieval_test.py
var/: brick_type_templates.json  ontologies.json  plot_types.json  typedef.json  upload_config.json
(+491 files in other folders)
